--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Editor | Basic Example</title>
+    <title>Content Editable Test</title>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
