--- a/test.html
+++ b/test.html
@@ -27,6 +27,10 @@
         </blockquote>
         <p></p>
         <p></p>
+        <div contenteditable="false">
+          <div contenteditable>
+          <input value="test" />
+        </div>
         <ul>
           <li>one</li>
           <li>two</li>
