--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <main></main>
-    <script src="build.js"></script>
+    <script src="build.prod.js"></script>
   </body>
 </html>
