--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main></main>
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es6"></script>
     <script src="build.prod.js"></script>
   </body>
 </html>
