--- a/dev.html
+++ b/dev.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main></main>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,es6"></script>
     <script>
       /* eslint-disable */
       // Dynamically creates the script and link tag and adds the current time
