--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main></main>
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,es6"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,es6,es7"></script>
     <script src="build.prod.js"></script>
   </body>
 </html>
